--- a/qBittorrent/config/qBittorrent.conf
+++ b/qBittorrent/config/qBittorrent.conf
@@ -34,7 +34,7 @@ Queueing\IgnoreSlowTorrents=true
 Queueing\MaxActiveDownloads=4
 Queueing\MaxActiveTorrents=10
 Queueing\MaxActiveUploads=10
-Queueing\QueueingEnabled=false
+Queueing\QueueingEnabled=true
 Search\SearchEnabled=true
 WebUI\Enabled=true
 WebUI\Port=8090
